# clifft-qiskit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  cliff.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  pr-title.yml  release.yml
src/clifft_qiskit/: __init__.py  _translate.py  backend.py
tests/: test_provider.py
