[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "clifft-qiskit"
dynamic = ["version"]
description = "Qiskit BackendV2 provider for the Clifft near-Clifford simulator"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Ashmit JaiSarita Gupta" }]
keywords = ["quantum", "qiskit", "clifft", "simulator", "clifford"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "clifft>=0.4",
    "qiskit>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "qiskit-aer>=0.17", "ruff>=0.6", "twine>=6.0"]

[project.urls]
Homepage = "https://github.com/unitaryfoundation/clifft-qiskit"
Issues = "https://github.com/unitaryfoundation/clifft-qiskit/issues"
Repository = "https://github.com/unitaryfoundation/clifft-qiskit"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/clifft_qiskit"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
